<resources>
    <string name="app_name">HLLPP Keyboard</string>
    <string name="enable_auto_caps">Enable Auto-Capitalization</string>
    <string name="enable_autocor">Enable Auto-Replacing Words</string>
    <string name="enable_editor_grid">Use text editor grid mode</string>
    <string name="theme_switcher">Keyboard Theme</string>
    <string name="height_switcher">Keyboard Height (qwerty only)</string>
    <string name="layout_switcher">Keyboard Layout</string>
    <string name="key_height">70dp</string>
    <string name="repo_link"><a href="https://github.com/shun4midx/HLLPP-Keyboard">HLLPP Keyboard</a> made by <a href="https://github.com/shun4midx">Shun</a> and <a href="https://github.com/ducky4life">Ducky</a></string>
    <string name="copyright_notice">Made with horrible Kotlin skills and Java coffee cups | © 2026 Shun and Ducky</string>
    <string name="edit_dictionary">English Dictionary</string>
    <string name="edit_dict_word">word to add/remove</string>
    <string name="add_to_dictionary">Add word to dictionary</string>
    <string name="remove_from_dictionary">Remove word from dictionary</string>
    <string name="set_system_keyboard">Set system keyboard</string>
    <string name="open_keyboard_settings">Open keyboard settings</string>
    <string name="set_keyboard_to_hllpp">Set Keyboard to HLLPP Keyboard</string>
    <string name="use_eten_layout">Use Eten layout for Zhuyin</string>
    <string name="emoji_switcher">Emoji variation</string>
    <string name="enable_sound">Sound on key press</string>
    <string name="sound_switcher">Sound effect on key press</string>
    <string name="audio">Audio</string>
    <string name="preferences">Preferences</string>
    <string name="text_correction">Text correction</string>
    <string name="replace_full_stop_function">Replace full stop delete word function with typing \'//\'</string>
    <string name="use_chi_default">Use Chinese keyboard as default</string>
    <string name="eng_keyboard_symbol_hint">English Keyboard Symbols</string>
    <string name="eng_custom_dict">English custom dictionary</string>
    <string name="import_from_file">Import from file</string>
    <string name="file_format">Files are in newline separated .txt format</string>
    <string name="lag_warning">Note: Importing from file might cause black screens to appear and increase lag temporarily (~1 min)</string>
    <string name="chinese_dictionary">Chinese Dictionary</string>
    <string name="remove_chi_dict">Remove full Chinese Dictionary</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="export_to_file">Export to file</string>
</resources>