<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/repoLink"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="24dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linear_layout_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_correction"
                android:textColor="@color/custom_hllpp_banner_pink"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/capsToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/enable_auto_caps" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/autocorToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/enable_autocor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences"
                android:textColor="@color/custom_hllpp_banner_pink"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/gridToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/enable_editor_grid" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fullStopCommentToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/replace_full_stop_function"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/chiKeyboardDefaultToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/use_chi_default"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_switcher" />

            <Spinner
                android:id="@+id/color_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_switcher" />

            <Spinner
                android:id="@+id/height_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/layout_switcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3sp"
                    android:textSize="12sp"
                    android:text="@string/english" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/chinese" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/eng_layout_options"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3sp"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/chi_layout_options"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/eng_keyboard_symbol_hint" />

            <Spinner
                android:id="@+id/symbol_hint_layout_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emoji_switcher" />

            <Spinner
                android:id="@+id/emoji_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                android:textColor="@color/custom_hllpp_banner_pink"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/keySoundToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/enable_sound" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_switcher" />

            <Spinner
                android:id="@+id/key_sound_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_dictionary"
                android:textColor="@color/custom_hllpp_banner_pink"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_dict_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit_dict_word"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/add_dict_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3sp"
                    android:text="@string/add_to_dictionary" />

                <Button
                    android:id="@+id/remove_dict_btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/remove_from_dictionary" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eng_custom_dict" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/get_dict_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3sp"
                    android:text="@string/export_to_file" />

                <Button
                    android:id="@+id/import_dict_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/import_from_file" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/file_format" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                android:text="@string/lag_warning" />

            <TextView
                android:layout_marginTop="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese_dictionary"
                android:textColor="@color/custom_hllpp_banner_pink"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_remove_chinese_dict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_chi_dict" />

            <TextView
                android:layout_marginTop="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_keyboard_to_hllpp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/open_settings_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_keyboard_settings" />

            <Button
                android:id="@+id/set_keyboard_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_system_keyboard" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/repoLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:gravity="bottom|center"
        android:text="@string/repo_link"
        app:layout_constraintBottom_toTopOf="@id/copyrightNotice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyrightNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="bottom|center"
        android:text="@string/copyright_notice"
        android:textSize="10.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>